--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
                 height: 100vh;
                 background: #333 url('/assets/background.jpg') center bottom no-repeat;
                 background-size: cover;
-                font-family: Helvetica, Arial, sans-serif;
+                font-family:
+                    -apple-system, BlinkMacSystemFont, "Segoe UI",
+                    Roboto, Helvetica, Arial, sans-serif,
+                    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
                 font-size: 15px;
                 text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
                 line-height: 1.5;
