Optimize the retina background

--- a/index.html
+++ b/index.html
@@ -126,7 +126,10 @@
                 margin: 2px;
             }
 
-            @media (min-width: 1300px), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
+            @media (min-width: 1300px),
+                (min-height: 1000px),
+                (-webkit-min-device-pixel-ratio: 2),
+                (min-resolution: 2dppx) {
                 body {
                     background-image: url('/assets/background@2x.jpg');
                 }
