Update the twitter link

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     on LinkedIn
                 </a>
 
-                <a href="https://twitter.com/neskeii" class="network-link">
+                <a href="https://twitter.com/johannpardanaud" class="network-link">
                     <i class="fa fa-3x fa-twitter-square" aria-hidden="true"></i> <br>
                     My thoughts <br>
                     on Twitter
