--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
         <meta property="og:image" content="http://johann.pardanaud.com/assets/background@2x.jpg">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:site" content="@neskeii">
-        <meta name="twitter:creator" content="@neskeii">
+        <meta name="twitter:site" content="@johannpardanaud">
+        <meta name="twitter:creator" content="@johannpardanaud">
         <meta name="twitter:title" content="Johann Pardanaud">
         <meta name="twitter:description" content="I'm a full-stack developer and I develop technical solutions for back-end, front-end and mobile environments.">
         <meta name="twitter:image" content="http://johann.pardanaud.com/assets/background.jpg">
