Upgrade HTTP urls to HTTPS

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
         <meta property="og:title" content="Johann Pardanaud">
         <meta property="og:description" content="I'm a full-stack developer and I develop technical solutions for back-end, front-end and mobile environments.">
-        <meta property="og:image" content="http://johann.pardanaud.com/assets/background@2x.jpg">
+        <meta property="og:image" content="https://johann.pardanaud.com/assets/background@2x.jpg">
 
         <meta name="twitter:card" content="summary_large_image">
         <meta name="twitter:site" content="@johannpardanaud">
         <meta name="twitter:creator" content="@johannpardanaud">
         <meta name="twitter:title" content="Johann Pardanaud">
         <meta name="twitter:description" content="I'm a full-stack developer and I develop technical solutions for back-end, front-end and mobile environments.">
-        <meta name="twitter:image" content="http://johann.pardanaud.com/assets/background.jpg">
+        <meta name="twitter:image" content="https://johann.pardanaud.com/assets/background.jpg">
 
         <title>Johann Pardanaud</title>
 
